--- a/views/components/public/header/header.html
+++ b/views/components/public/header/header.html
@@ -4,11 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<title>me.note.com</title>
-	<link rel="stylesheet" href="">
+	<title><%= title %></title>
+	<link rel="stylesheet" href="style/normalize.css">
 </head>
 <body>
-	<h1>hello co-views</h1>	
-	<%= user.age %>
-</body>
-</html>
