--- a/views/components/index/index.html
+++ b/views/components/index/index.html
@@ -1,7 +1,7 @@
 <% include ../public/header/header.html %>
 
 <div class="ui-index">
-	<h1>hello co-views</h1>	
+	<h1>hello gulp-livereload</h1>	
 	<%= user.age %>
 </div>
 
